@@ -14,25 +14,25 @@ library(CHNOSZ)
 opar <- par(no.readonly = TRUE)
 layout(matrix(1:4, nrow = 2))
 
-# set pH and T range and resolution, constant temperature and ionic strength
+# Set pH and T range and resolution, constant temperature and ionic strength
 pH <- c(0, 14)
 T <- c(0, 300)
 res <- 100
 T1 <- 25
 IS <- 0
 
-# start with CO2
+# Start with CO2
 basis(c("carbon dioxide", "H2O", "O2", "H+"))
-# ca. atmospheric PCO2
+# This is ca. atmospheric PCO2
 basis("CO2", -3.5)
 species(c("CO2", "HCO3-", "CO3-2"))
 a <- affinity(pH = c(pH, res), T = T1, IS = IS)
 s <- solubility(a)
-# first plot total activity line
+# First plot total activity line
 diagram(s, ylim = c(-10, 4), type = "loga.balance", lwd = 4, col = "green2")
-# add activities of species
+# Add activities of species
 diagram(s, ylim=c(-10, 4), add = TRUE, dy = 1)
-# add legend
+# Add legend
 lexpr <- as.expression(c("total", expr.species("CO2", state = "aq"),
   expr.species("HCO3-"), expr.species("CO3-2")))
 legend("topleft", lty = c(1, 1:3), lwd = c(4, 2, 2, 2),
@@ -40,7 +40,7 @@ legend("topleft", lty = c(1, 1:3), lwd = c(4, 2, 2, 2),
 title(main = substitute("Solubility of"~what~"at"~T~degree*"C",
   list(what = expr.species("CO2"), T = T1)), line = 1.6)
 mtext("cf. Fig. 4.5 of Stumm and Morgan, 1996")
-# check the endpoints
+# Check the endpoints
 stopifnot(round(s$loga.balance[c(1, res)])==c(-5, 6))
 
 # CO2 T-pH plot
@@ -49,11 +49,12 @@ s <- solubility(a)
 diagram(s, type = "loga.balance")
 title(main = substitute("Solubility of"~what, list(what = expr.species("CO2"))))
 
-# now do calcite
+# Now do calcite
 basis(c("calcite", "Ca+2", "H2O", "O2", "H+"))
 species(c("CO2", "HCO3-", "CO3-2"))
 a <- affinity(pH = c(pH, res), T = T1, IS = IS)
-s <- solubility(a)
+# Change this to dissociate = 2 to reproduce straight lines in Fig. 4A of Manning et al., 2013
+s <- solubility(a, dissociate = TRUE)
 diagram(s, ylim = c(-10, 4), type = "loga.balance", lwd = 4, col = "green2")
 diagram(s, add = TRUE, dy = 1)
 legend("topright", lty = c(1, 1:3), lwd = c(4, 2, 2, 2),
@@ -61,10 +62,10 @@ legend("topright", lty = c(1, 1:3), lwd = c(4, 2, 2, 2),
 title(main = substitute("Solubility of"~what~"at"~T~degree*"C",
   list(what = "calcite", T = T1)), line = 1.6)
 mtext("cf. Fig. 4A of Manning et al., 2013")
-# check the endpoints
+# Check the endpoints
 stopifnot(round(s$loga.balance[c(1, res)])==c(4, -4))
 
-# calcite T-pH plot
+# Calcite T-pH plot
 a <- affinity(pH = c(pH, res), T = c(T, res), IS = IS)
 s <- solubility(a)
 diagram(s, type = "loga.balance")
